# web-bot

./: Dockerfile  bot.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
